--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -1,22 +1,31 @@
 body {
     margin: 0;
+    padding: 0;
+    overscroll-behavior: none;
     background-color: white;
+    overflow: hidden;
 }
 
+hr {
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    margin: 2rem 0;
+    width: 100%;
+}
 
 button {
     font-size: 18px;
-    outline: none;
-    border: none;
+    border: 2px solid black;
     color: black;
     background-color: transparent;
     padding: 5px 20px;
-    border-radius: 3px;
-    transition: background-color 0.2s ease;
+    border-radius: 6px;
+    transition: background-color 0.5s ease;
+    cursor: pointer;
 }
-
 button:hover {
-    background-color: rgb(230, 230, 230);
+    background-color: rgb(100, 100, 100);
+    color: white;
 }
 
 button:focus {
@@ -25,4 +34,94 @@ button:focus {
 
 .hidden {
     display: none !important;
+}
+
+#game-canvas {
+    background-color: cornsilk;
+    width: 100%;
+    height: 100%;
+}
+#play-menu {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    padding: 20px 30px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    text-align: center;
+}
+
+#play-menu p {
+    margin-bottom: 0;
+}
+
+#play-menu input {
+    border-radius: 10px;
+    margin-top:10px;
+    font-size: 18px;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid black;
+    margin-bottom: 5px;
+    padding: 3px;
+    text-align: center;
+
+}
+
+
+#play-menu input:hover {
+    background-color: rgb(240, 240, 240);
+    outline: none;
+}
+
+#leaderboard {
+    width: 20%;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(255, 255, 255, 0.4);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.leaderboard_info{
+    font-size: 10px;
+}
+
+#leaderboard th {
+    text-align: center;
+    padding: 2px 5px;
+}
+
+#leaderboard td {
+    text-align: center;
+    padding: 2px 5px;
+}
+#leaderboard caption {
+    font-size: 12px;
+}
+
+#disconnect-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+#disconnect-modal > div {
+    font-size:15px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    padding: 15px 20px;
+    background-color: white;
+    border-radius: 20px;
+    text-align: center;
 }
