show other menu if dead

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -132,3 +132,47 @@ button:focus {
     border-radius: 20px;
     text-align: center;
 }
+
+
+#no-connect-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+#no-connect-modal > div {
+    font-size:15px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    padding: 15px 20px;
+    background-color: white;
+    border-radius: 20px;
+    text-align: center;
+}
+
+
+#dead-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+#dead-menu > div {
+    font-size:15px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    padding: 15px 20px;
+    background-color: white;
+    border-radius: 20px;
+    text-align: center;
+}
