--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -176,3 +176,30 @@ button:focus {
     border-radius: 20px;
     text-align: center;
 }
+
+
+#upgrade-menu {
+    position: fixed;
+    top: 70%;
+    left: 5%;
+    /*transform: translateY(-50%) translateX(-50%);*/
+    padding: 0;
+    background-color: transparent;
+    color: black;
+    display: grid;
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+    border-radius: 20px;
+    text-align: center;
+}
+
+#upgrade-menu button{
+    width: 110px;
+    border-width: 1px;
+}
+
+#upgrade-menu p{
+    width: 150px;
+    margin:0;
+    padding: 0;
+}
