--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -76,8 +76,32 @@ button:focus {
     margin-bottom: 5px;
     padding: 3px;
     text-align: center;
-
 }
+
+#changePass{
+    width: 200px;
+}
+
+.auth input{
+    margin-bottom: 10px;
+    padding: 3px;
+}
+
+#not_logged{
+    align-items: flex-start;
+    display: flex;
+    /*display: inline;*/
+}
+#not_logged button{
+    height: 30px;
+    width: 70px;
+    font-size: 15px;
+    padding: 0;
+    /*display: inline;*/
+}
+
+
+
 
 
 .disabled {
@@ -210,3 +234,77 @@ button:focus {
 
     border-width: 1px;
 }
+
+/*#Registration {*/
+/*    position: fixed;*/
+/*    top: 50%;*/
+/*    right: 20%;*/
+/*    transform: translateY(-50%) translateX(-50%);*/
+/*    padding: 20px 30px;*/
+/*    background-color: black;*/
+/*    color: white;*/
+/*    display: grid;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    border-radius: 20px;*/
+/*    text-align: center;*/
+/*}*/
+
+
+
+
+form{
+    position: fixed;
+    top: 50%;
+    right: 10%;
+    transform: translateY(-50%) translateX(-50%);
+    /*width: 200px;*/
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 20px 30px;
+    /*box-shadow: 1px 2px 3px rgba(0,0,0,0.1);*/
+    border-radius: 10px;
+    background: black;
+    color: white;
+    /*align-items: center;*/
+    align-items: unset;
+}
+
+.authButton{
+    width: 90px;
+    alignment: center;
+    padding: 5px 1px;
+    font-size: 15px;
+    border-width: 1px;
+}
+
+
+
+/*h3 {*/
+/*    color: white;*/
+/*}*/
+
+input{
+    padding: 1px 2px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    font-size: 1em;
+    width: 100%;
+}
+/*label{*/
+/*    display: block;*/
+/*    margin: 20px 0 10px;*/
+/*}*/
+/*button{*/
+/*    margin-top: 30px;*/
+/*    border-radius: 36px;*/
+/*    background: #FEE996;*/
+/*    border:0;*/
+/*    text-transform: uppercase;*/
+/*    font-weight: 700;*/
+/*    font-size: 0.8em;*/
+/*    display: block;*/
+/*    padding: 10px 16px;*/
+/*    letter-spacing: 2px;*/
+/*}*/
