--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -13,6 +13,13 @@ hr {
     width: 100%;
 }
 
+.error{
+    color: #ff0099;
+    margin: 10px 2px;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
 button {
     font-size: 18px;
     border: 2px solid black;
@@ -99,6 +106,21 @@ button:focus {
     padding: 0;
     /*display: inline;*/
 }
+
+#back_login{
+    align-items: flex-start;
+    display: flex;
+}
+
+#back_login button{
+    height: 30px;
+    width: 70px;
+    font-size: 15px;
+    padding: 0;
+    /*display: inline;*/
+}
+
+
 
 
 
